# fabm-mizer

./: .gitignore  README.md  model_library.F90  multi_element_mizer_demersal.F90  multi_element_mizer_demersal_pelagic.F90  multi_element_support.F90
python/: analyze_amm7.py  analyze_eez.py  analyze_gotm_result.py  analyze_gotm_scenarios.py  fabm.yaml  mizer.ipynb  mizer.py  mizer.yaml  run_offline_amm7.py  run_offline_gotm.py  slurm.py
python/mizer/: __init__.py  datasources.py  mizer.yaml
src/: CMakeLists.txt  model_library.F90  multi_element_mizer.F90  multi_element_mizer_demersal_pelagic.F90  multi_element_mizer_demersal_pelagic_before_size_dependant_omega.F90  multi_element_mizer_demersal_pelagic_bsdo.F90  multi_element_support.F90  prey.F90  resource_spectrum.F90  size_structured_base.F90  size_structured_population.F90
testcases/: fabm-BlanJenn2009.yaml  fabm-BlanJenn2012.yaml  fabm-ersem-mizer-amm7.yaml  fabm-ersem-mizer.yaml
testcases/mizer_0d/: fabm.yaml  output.yaml  plot_distribution.py  run.nml  simulate.py
util/GOTM-ERSEM-mizer/: compare_online_offline.py  extract_initial_condition.py
util/NEMO-ERSEM-mizer/: gather_forcing.py  mizer.sbatch  prepare_restart.py
